<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gipsolet</string>
    <string name="app_description">Geolocation in Triolet campus</string>
    <string name="search_hint">Search in campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon">icon</string>
    <string name="menu_settings">Menu Settings</string>

    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <string name="current_location">You\'re in the building %s</string>
    <string name="no_results">No results found for \"%s\"</string>
    <string name="search_activity">Gipsolet: Global search</string>
    <string name="building">Building</string>
    <string name="buildings">Buildings</string>
    <string name="rooms">Rooms</string>
    <string name="services">Services</string>
    <string name="services_list">Services\'s list</string>
    <string name="rooms_list">Rooms\'s list</string>
    <string name="buildings_list">Building\'s list</string>
    <string name="not_in_triolet">You\'re currently outside of the campus</string>
    <string name="in_triolet">You\'re currently in the campus</string>
    <string name="map">Map</string>
    <string name="location_disabled">Geolocation disabled</string>
    <string name="location_disabled_description">Gipsolet has stopped following you.</string>
    <string name="location_changed">Gipsolet is following you</string>
    <string name="location_changed_enter_campus">You just enter the Triolet campus.</string>
    <string name="location_changed_enter_building">You just enter in the %s</string>
    <string name="location_changed_quit_campus">You just left the Triolet campus.</string>
    <string name="location_changed_quit_building">You just left the %s.</string>
    <string name="label">Label</string>
    <string name="assKeywords">Associated keywords</string>
    <string name="floor">Floor</string>
    <string name="ground_floor">Ground floor</string>
    <string name="descr">Description</string>
    <string name="service">Service</string>
    <string name="hall">Hall</string>
    <string name="tutorial_room">Tutorial room</string>
    <string name="class_room">Class room</string>
    <string name="entity">entity</string>
    <string name="campus_name">Triolet Campus</string>
    <string name="buildingsEntities">List of all associated entities</string>
    <string name="map_bug_on_avd">The emulator doesn\'t handle Google Maps</string>
    <string name="title_activity_config_map">ConfigMapActivity</string>
    <string name="camera_tilt">Camera Tilt</string>
    <string name="buildingRooms">Rooms of building %s</string>
    <string name="buildingServices">Services of building %s</string>
    <string name="view_on_map">View</string>
    <string name="go_home">Go home</string>
	<string name="type_map">Map Type</string>
</resources>