<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:duplicateParentState="false"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaffffff"
        android:drawableLeft="@drawable/action_search"
        android:drawablePadding="5dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@+string/search_hint"
        android:inputType="none"
        android:onClick="onClickSearchEditText"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColorHint="@color/gray" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:background="@color/gray"
        android:paddingBottom="2dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="2dp"
        android:text="@string/app_description"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="214dp"
        android:layout_height="0dip"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_weight="0.22"
        android:gravity="right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/menuButtonBuildings"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/building"
            android:text="@string/buildings"
            android:onClick="onClickList" />

        <Button
            android:id="@+id/menuButtonRooms"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/room"
            android:text="@string/rooms" 
        	android:onClick="onClickList" />

        <Button
            android:id="@+id/menuButtonServices"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/service"
            android:text="@string/services" 
            android:onClick="onClickList" />

        <Button
            android:id="@+id/menuButtonMap"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/location_map"
            android:text="@string/map"
            android:onClick="onClickButtonMap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/not_in_triolet"
            style="@style/SimpleButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location_place"
            android:gravity="left|center_vertical"
            android:minHeight="0dp"
            android:onClick="goCampus"
            android:text="@string/not_in_triolet"
            android:textSize="13sp" />

        <Button
            android:id="@+id/in_triolet"
            style="@style/SimpleButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location_place"
            android:gravity="left|center_vertical"
            android:text="@string/not_in_triolet"
            android:textSize="13sp"
            android:onClick="onClickButtonMap"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
