<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/entityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:background="@color/gray"
        android:paddingBottom="2dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="2dp"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="214dp"
        android:layout_height="0dip"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_weight="0.22"
        android:gravity="right"
        android:orientation="vertical" >
        <Button
            android:id="@+id/menuButtonBuildingRooms"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/room"
            android:onClick="onClickList"
            android:text="@string/rooms" />

        <Button
            android:id="@+id/menuButtonBuildingServices"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/service"
            android:onClick="onClickList"
            android:text="@string/services" />

        <Button
            android:id="@+id/viewOnMap"
            style="@style/ButtonMenu"
            android:drawableRight="@drawable/location_map"
            android:onClick="viewOnMap"
            android:text="@string/view_on_map" />
    </LinearLayout>

</LinearLayout>